Adding more stuff, made look ever-so-slightly less bad on some pages

--- a/hacking_resources.html
+++ b/hacking_resources.html
@@ -3,21 +3,15 @@
 	<head>
 		<title>Hacking Resources</title>
 	</head>
-	<body>
+	<body align = center>
 		<h1>Hacking Resources</h1>
 		<hr>
 		<a href = "homepage.html">Return to Homepage</a>
 		<br>
-		<h2>Things to add to this page:</h2>
-		<ul>
-			<li>Bookmarks</li>
-			<li>Links to other people's lists</li>
-			<li>Books I want to get or have</li>
-			<li>Miscellaneous resources (YouTube channels, podcasts, etc)</li>
-		</ul>
-		<h2>Hacking Courses</h2>
+		</ul style="list-style: none;">
 		<hr>
-		<ul>
+		<h2>Hacking Courses</h2>
+		<ul style="list-style: none;">
 			<li><a href="https://portswigger.net/web-security/all-labs" target="_blank" rel="noopener noreferrer">PortSwigger Labs</a></li>
 			<li><a href="https://tryhackme.com/paths" target="_blank" rel="noopener noreferrer">TryHackMe</a></li>
 			<li><a href="https://www.offensive-security.com/labs/individual/" target="_blank" rel="noopener noreferrer">Proving Grounds</a></li>
@@ -30,18 +24,18 @@
 			<li><a href="https://my.ine.com/" target="_blank" rel="noopener noreferrer">INE</a></li>
 			<li><a href="https://www.cybrary.it/" target="_blank" rel="noopener noreferrer">Cybrary</a></li>
 		</ul>
-		<h2>Hacking Forums</h2>
 		<hr>
-		<ul>
+		<h2>Hacking Forums</h2>
+		<ul style="list-style: none;">
 			<li><a href="http://www.hacking-tutorial.com/" target="_blank" rel="noopener noreferrer">Ethical Hacking Tutorials, Tips, and Tricks</a></li>
 			<li><a href="https://hackaday.com/" target="_blank" rel="noopener noreferrer">Hackaday, Fresh Hacks Everyday</a></li>
 			<li><a href="https://www.hitb.org/" target="_blank" rel="noopener noreferrer">Hackinthebox, Keeping Knowledge Free</a></li>
 			<li><a href="https://www.hellboundhackers.org/" target="_blank" rel="noopener noreferrer">Hellbound Hackers</a></li>
 			<li><a href="http://www.phrack.org/" target="_blank" rel="noopener noreferrer">.:: Phrack Magazine ::.</a></li>
 		</ul>
-		<h2>Capture The Flag</h2>
 		<hr>
-		<ul>
+		<h2>Capture The Flag</h2>
+		<ul style="list-style: none;">
 			<li><a href="https://app.hackthebox.eu/home" target="_blank" rel="noopener noreferrer">HackTheBox</a></li>
 			<li><a href="https://www.hackthissite.org/user/themes" target="_blank" rel="noopener noreferrer">HackThisSite</a></li>
 			<li><a href="https://microcorruption.com/" target="_blank" rel="noopener noreferrer">MicroCorruption</a></li>
@@ -58,9 +52,9 @@
 			<li><a href="http://ctf.komodosec.com/" target="_blank" rel="noopener noreferrer">Application Security Challenge</a></li>
 			<li><a href="https://hackerone.com/bug-bounty-programs" target="_blank" rel="noopener noreferrer">HackerOne</a></li>
 		</ul>
-		<h2>Hacking Resources</h2>
 		<hr>
-		<ul>
+		<h2>Hacking Resources</h2>
+		<ul style="list-style: none;">
 			<li><a href="http://www.jsfuck.com/" target="_blank" rel="noopener noreferrer">JSFuck</a></li>
 			<li><a href="https://utf-8.jp/public/aaencode.html" target="_blank" rel="noopener noreferrer">aaencode</a></li>
 			<li><a href="https://gchq.github.io/CyberChef/" target="_blank" rel="noopener noreferrer">CyberChef</a></li>
@@ -83,9 +77,9 @@
 			<li><a href="https://app.any.run/" target="_blank" rel="noopener noreferrer">Interactive Online Malware Analysis Sandbox</a></li>
 			<li><a href="https://hashcat.net/wiki/doku.php?id=example_hashes" target="_blank" rel="noopener noreferrer">Hashcat example hashes</a></li>
 		</ul>
-		<h2>Hacking Databases</h2>
 		<hr>
-		<ul>
+		<h2>Hacking Databases</h2>
+		<ul style="list-style: none;">
 			<li><a href="https://cve.mitre.org/" target="_blank" rel="noopener noreferrer">CVE</a></li>
 			<li><a href="https://nvd.nist.gov/" target="_blank" rel="noopener noreferrer">NVD</a></li>
 			<li><a href="https://seclists.org/" target="_blank" rel="noopener noreferrer">Seclists</a></li>
@@ -94,17 +88,17 @@
 			<li><a href="https://attack.mitre.org/groups/" target="_blank" rel="noopener noreferrer">Hacker Groups</a></li>
 			<li><a href="https://attack.mitre.org/" target="_blank" rel="noopener noreferrer">MITRE ATT&CK</a></li>
 		</ul>
-		<h2>Open Source Intelligence</h2>
 		<hr>
-		<ul>
+		<h2>Open Source Intelligence</h2>
+		<ul style="list-style: none;">
 			<li><a href="https://www.shodan.io/" target="_blank" rel="noopener noreferrer">Shodan</a></li>
 			<li><a href="https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml" target="_blank" rel="noopener noreferrer">Service Name and Transport Protocol Port Registry</a></li>
 			<li><a href="https://www.faxvin.com/license-plate-lookup" target="_blank" rel="noopener noreferrer">License Plate Lookup</a></li>
 			<li><a href="https://www.arin.net/" target="_blank" rel="noopener noreferrer">American Registry for Internet Numbers</a></li>
 		</ul>
-		<h2>YouTube Channels</h2>
 		<hr>
-		<ul>
+		<h2>YouTube Channels</h2>
+		<ul style="list-style: none;">
 			<li><a href="https://www.youtube.com/c/ippsec" target="_blank" rel="noopener noreferrer">IppSec</a></li>
 			<li><a href="https://www.youtube.com/c/thehackerish" target="_blank" rel="noopener noreferrer">thehackerish</a></li>
 			<li><a href="https://www.youtube.com/user/DeviantOllam" target="_blank" rel="noopener noreferrer">DeviantOllam</a></li>
@@ -118,13 +112,15 @@
 			<li><a href="https://www.youtube.com/c/RedTeamVillage" target="_blank" rel="noopener noreferrer">Red Team Village</a></li>
 			<li><a href="https://www.youtube.com/c/BlueTeamVillage" target="_blank" rel="noopener noreferrer">Blue Team Village</a></li>
 		</ul>
-		<h2>Books</h2>
 		<hr>
-		<ul>
-			<li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
-			<li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
-			<li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
-			<li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
+		<h2>Books</h2>
+		<ul style="list-style: none;">
+			<li><a href="https://www.amazon.com/Countdown-Zero-Day-Stuxnet-Digital/dp/0770436196" target="_blank" rel="noopener noreferrer">Countdown To Zero Day - Kim Zetter</a></li>
+			<li><a href="https://www.amazon.com/Sandworm-Cyberwar-Kremlins-Dangerous-Hackers/dp/0525564632" target="_blank" rel="noopener noreferrer">Sandworm - Andy Greenberg</a></li>
+			<li><a href="https://www.amazon.com/Breaking-and-Entering-audiobook/dp/B07JHV3W1Q" target="_blank" rel="noopener noreferrer">breaking/_and/entering - Jeremy N. Smith</a></li>
+			<li><a href="https://www.amazon.com/ghost-wires-my-adventures-as-world-s-most-wanted-hacker-kevin-mitnick/dp/B00A2M2540" target="_blank" rel="noopener noreferrer">Ghost in the Wires - Kevin Mitnick</a></li>
+			<li><a href="https://www.amazon.com/Art-Invisibility-Worlds-Teaches-Brother/dp/0316380520" target="_blank" rel="noopener noreferrer">The Art of Invisibility - Kevin Mitnick</a></li>
+			<li><a href="https://www.amazon.com/Cult-of-Dead-Cow-Joseph-Menn-audiobook/dp/B07RX456JM" target="_blank" rel="noopener noreferrer">Cult of the Dead Cow - Joseph Menn</a></li>
 		</ul>
 	</body>
 </html>
