--- a/homepage.html
+++ b/homepage.html
@@ -9,19 +9,22 @@
 		<br>Clearly I have no idea what I'm doing :)
 		<hr>
 		<ul>
-			<li><a href="entertainment.html">Entertainment Links</a></li>
 			<li><a href="hacking_resources.html">Hacking Resources</a></li>
 			<li><a href="playground.html">Offensive/Defensive Security Playground</a></li>
-			<li><a href="professional.html">Professional Info</a></li>
+			<li><a href="professional-tc.html">About - Tyler Cingel</a></li>
+			<li><a href="professional-mf.html">About - Michael Foley</a></li>
 		</ul>
 		<br>
 		<h2>Things to add to this page:</h2>
 		<ul>
-			<li>Biography</li>
-			<li>Hobbies</li>
-			<li>Photos</li>
-			<li>Social Media</li>
+			<li>Man</li>
+			<li>I</li>
+			<li>Don't</li>
+			<li>Know</li>
+			<li>CSS</li>
 		</ul>
+		<br>Developer's note: don't put anything on any of these pages that you wouldn't want any future boss to see, remember anything you commit will be visible in the git logs.
+		<br>Developer's note pt 2: remove temporary git login credentials from jJe9yzjv.html
 	</body>
 </html>
 
