--- a/playground.html
+++ b/playground.html
@@ -15,5 +15,7 @@
 			<li></li>
 			<li></li>
 		</ul>
+		This page is meant to be a place where random html tags or assets can be placed, and then attempt to be broken.
+		For example, a way to upload comments can be added (to learn how to store user input), then it can attempt to be broken (XSS, SQLI, etc) and after that we can learn to fix it, and try to break whatever fix we added.
 	</body>
 </html>
